--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -22,6 +22,19 @@
 .legal {
   text-align: left;
   margin-right: 10px;
+  // space out each child element
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  // control top/bottom margins of paragraph elements
+  p {
+    margin-block-start: 0.75em;
+    margin-block-end: 0.75em;
+  }
+  // hide the project code we only want in mobile
+  span.legal.mobile.project-code {
+    display: none;
+  }
 }
 
 .project-code {
@@ -61,14 +74,19 @@
 }
 
 @media screen and (max-width: $breakpoint) {
+  .desktop.project-code {
+    display: none;
+  }
   .legal-logos-container {
     flex-direction: column;
     .legal {
       width: 100%;
-    }
-    .project-code {
-      text-align: left;
-      margin: 0;
+      // show the project code we want in mobile
+      span.legal.mobile.project-code {
+        display: inline-block;
+        text-align: left;
+        margin: 2em 0 0;
+      }
     }
     .logos {
       // Footer image spacing
