--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -58,7 +58,7 @@ $dose-heading-foot: calc(12px + 0.6vw);
 // Shadows
 $nav-shadow: inset 0px 5px 5px -2px rgba(0,0,0,0.3);
 $box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.5);
-$dose-calc-shadow: 0px 0px 15px -3px rgba(0,0,0,0.2);;
+$dose-calc-shadow: 0px 0px 15px -3px rgba(0,0,0,0.2);
 $bottom-border-shadow: 0px 2px 2px 0px rgba(0,0,0,0.2);
 $output-cell-top-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.2);
 $dose-card-shadow: -30px 0px 50px 0px rgba(0,0,0,0.1);
